# VoiceActorLaboratory

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  script_cool_logical_male.txt  台本PDF縦書きレイアウトガイドライン.md  無窮サムライ伝_台本.txt
docs/: D001.md  SUBMODULE_FUJI_YUMA.md  THEME_CHECKLIST.md  alto-bucciarati-gojo-major-lines-with-context.md  giorno-cioccolata-seven-page-muda.md  外郎売.pptx  外郎売_v2.pptx  羅生門.md  羅生門.pptx  羅生門_v2.pptx
src/: __init__.py  audio_processing.py  playback.py  project.py  recorder.py  script_format.py  script_template.py  storage.py
stream-overlays/: README.md  ending.html  main-reading.html  main-talk.html  waiting.html
tests/: test_app_font_size.py  test_audio_processing.py  test_clip_detection_and_bulk.py  test_line_number_area_current.py  test_lufs_indicator.py  test_playback.py  test_project.py  test_recorder.py  test_reveal_in_file_manager.py  test_script_format.py  test_settings.py  test_storage.py  test_theme_loader.py  test_version.py  test_waveform_widget.py
tools/: md_to_pdf.py
台本/: README.md  generate_pdf.py  アプリ紹介_VoiceActorLaboratory_台本.md  オーディション対策_女性版_セリフ集.md  オーディション対策_男性版_セリフ集.md  サンプルボイス_藤優真_男性声優.md  サンプルボイス_藤優真_男性声優_拡張版.md  シチュエーションボイス_女性版_セリフ集.md  シチュエーションボイス_男性版_セリフ集.md  ドキュメンタリー_ナレーション_台本.txt  ナレーション読み分け_女性版_セリフ集.md  ナレーション読み分け_男性版_セリフ集.md  バーテンダーと常連客_台本.md  ピッチコントロール_女性版_セリフ集.md  ピッチコントロール_男性版_セリフ集.md  ブレスコントロール_女性版_セリフ集.md  ブレスコントロール_男性版_セリフ集.md  ボイスサンプル作成ガイドライン.md  ボイスサンプル台本_藤優真.md  ボイスサンプル台本_藤優真_全10セット.md  レジデンス.txt  企業紹介_ネクストイノベーション_台本.txt  先生、わたし悪い子なんです.md  外郎売_台本.txt  (+38 more)
(+79 files in other folders)
