[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-actor-laboratory"
version = "0.1.0"
description = "声優が台本を見ながら複数テイクを録音・再生・比較するデスクトップアプリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.24.0",
    "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = "test_*.py"
